# cardano-cli-gov-wrapper

./: .env  .env.example  .gitignore  Cargo.toml  README.md  readme.md
src/: actions.rs  balance.rs  config.rs  constitution.txt  governance.rs  keypairs.rs  main.rs  proposal.rs  query.rs  setup.rs  stake.vkey  transaction.rs  utils.rs  vote.rs  wallet.rs
